[package]
name = "live-radio-songrec"
version = "1.0.1"
edition = "2021"
readme = "README.md"
description = "Rust program to listen to live radio (audio) streams and recognize currently playing songs using Shazam."
repository = "https://github.com/jjaacckk/live-radio-songrec"
exclude = ["test_files/*"]
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
byteorder = "1.5.0"
chfft = "0.3.4"
crc32fast = "1.4.0"
# gettext-rs = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
rodio = "0.18.0"
serde_json = "1.0.115"
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "1.23.1", features = ["macros", "rt"] }
stream-download = { version = "0.5.2" }
infer = "0.15.0"
